@startuml Seniority

interface Seniority {
    + {abstract}ascenderSeniority(turno: Turno): Seniority
    + {abstract}aumentarEnergia(energia: Energia)
    + {abstract}descripcion(): String
}

class Novato {
    -energia: Energia
    -turnosParaEvolucionar: Turno
    + ascenderSeniority(turno: Turno): Seniority
    + aumentarEnergia(energia: Energia)
    + descripcion(): String
}

class SemiSenior{
    -energia: Energia
    -turnosParaEvolucionar: Turno
    + ascenderSeniority(turno: Turno): Seniority
    + aumentarEnergia(energia: Energia)
    + descripcion(): String
   }

class Senior {
    -energia: Energia
    + ascenderSeniority(turno: Turno): Seniority
    + aumentarEnergia(Energia energia)
    + descripcion(): String
}

Seniority <|.. Novato
Seniority <|... SemiSenior
Seniority <|.. Senior

@enduml